<resources>
    <string name="app_name">repo</string>
    <string name="label_logo">label_logo</string>
    <string name="login_github">Github 로그인</string>
    <string name="main_appbar_title">What\'s in My GitHub</string>
    <string name="label_search_icon">label_search_icon</string>
    <string name="label_profile_icon">label_profile_icon</string>
    <string name="login_error_message">로그인 인증에 실패했습니다.</string>
    <string name="fragment_search">Search</string>
    <string name="fragment_profile">Profile</string>
    <string name="fragment_issue">Issue</string>
    <string name="fragment_notifications">Notifications</string>
    <string name="hint_search">Search GitHub</string>
    <string name="label_search_clear_icon">label_search_clear_icon</string>
    <string name="label_repository_star">label_repository_star</string>
    <string name="search_blank_title">Find Your Stuff</string>
    <string name="search_blank_description">Search all of GitHub for People,\n Repositories, Organizations, Issues,\n and Pull Requests.</string>
    <string name="notification_error">네트워크 상에 문제가 발생했습니다!</string>
    <string name="issue_filter">Filter</string>
    <string name="label_issue_state">label_issue_state</string>
    <string name="profile_friends_count">%d Followers · %d Following</string>
</resources>