<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main"
        tools:context=".presentation.search.SearchFragment"
        tools:ignore="MissingConstraints">

        <com.github.repo.presentation.common.CustomToolbar
            android:id="@+id/tb_search"
            android:layout_width="0dp"
            android:layout_height="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:toolbarTitle="@string/fragment_search"
            app:toolbarTitleColor="@color/white" />

        <EditText
            android:id="@+id/et_search"
            style="@style/SubTitle2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@null"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_search"
            android:inputType="textMultiLine|textNoSuggestions"
            android:paddingStart="56dp"
            android:paddingEnd="56dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_search" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/label_search_icon"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@id/et_search"
            app:layout_constraintStart_toStartOf="@id/et_search"
            app:layout_constraintTop_toTopOf="@id/et_search" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:contentDescription="@string/label_search_clear_icon"
            android:src="@drawable/ic_variant10"
            app:layout_constraintBottom_toBottomOf="@id/et_search"
            app:layout_constraintEnd_toEndOf="@id/et_search"
            app:layout_constraintTop_toTopOf="@id/et_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_repository"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search"
            tools:listitem="@layout/item_repository" />

        <TextView
            android:id="@+id/tv_blank_title"
            style="@style/AppBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_blank_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_blank_description"
            style="@style/AppBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_blank_description"
            android:textColor="@color/grey" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            app:constraint_referenced_ids="tv_blank_title, tv_blank_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>