<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profileImgUrl"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main"
        tools:context=".presentation.main.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/AppBarTitle"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/main_appbar_title">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_profile"
                setImage="@{profileImgUrl}"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/label_profile_icon"
                app:shapeAppearanceOverlay="@style/circleImageView" />

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginEnd="24dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/label_search_icon"
                android:src="@drawable/ic_search_bold" />
        </androidx.appcompat.widget.Toolbar>

        <RadioGroup
            android:id="@+id/rg_fragment_tab"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <RadioButton
                android:id="@+id/btn_issue"
                style="@style/SubTitle2.white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:button="@null"
                android:checked="true"
                android:text="@string/fragment_issue"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/btn_notifications"
                style="@style/SubTitle2.white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:button="@null"
                android:text="@string/fragment_notifications"
                android:textAlignment="center" />
        </RadioGroup>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fcv_main"
            android:name="com.github.repo.presentation.main.issue.IssueFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_fragment_tab" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>